Fixed video clipping at bottom of image.

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -9,6 +9,7 @@
 
 .hero-background-image-video {
     position: absolute;
+    bottom: 15px;
     z-index: -1;
     border-radius: 15px;
     object-fit: cover;
@@ -35,6 +36,7 @@
     transform: translate(-50%, -50%);
     font-weight: normal;
     margin: 0;
+    /* z-index: -2; */
 }
 
 .cls-1 {
